verification/AutoV/Spec/parser/SpecParser.py
# Generated from Spec.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SpecParser ( Parser ):

    grammarFileName = "Spec.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':='", "'.'", "':'", "'Include'", "'Hint'", 
                     "'Z'", "'bool'", "'string'", "'Type'", "'Prop'", "'list'", 
                     "'option'", "'ZMap.t'", "','", "'=='", "'{'", "'}'", 
                     "'['", "']'", "':<'", "'in'", "';'", "'|'", "'=>'", 
                     "'mk'", "'Inductive'", "'Record'", "'Fixpoint'", "'Section'", 
                     "'End'", "'::'", "'++'", "'+'", "'-'", "'*'", "'/'", 
                     "'mod'", "'<<'", "'>>'", "'&'", "'|''", "'&&'", "'||'", 
                     "'=?'", "'<>?'", "'>?'", "'<?'", "'>=?'", "'<=?'", 
                     "'=s'", "'<>s'", "'@'", "'#'", "'/\\'", "'\\/'", "'~'", 
                     "'!'", "'->'", "'<->'", "'='", "'<>'", "'>'", "'<'", 
                     "'>='", "'<='", "'('", "')'", "'if'", "'then'", "'let'", 
                     "'else'", "'Parameter'", "'Definition'", "'when'", 
                     "'forall'", "'exists'", "'match'", "'return'", "'with'", 
                     "'end'", "'rely'", "'anno'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "MK", "INDUC", "RECORD", "FIXPOINT", 
                      "SECTION", "SECTION_END", "APPEND", "CONCAT", "ADD", 
                      "MINUS", "MULT", "DIV", "MOD", "LSHIFT", "RSHIFT", 
                      "BITAND", "BITOR", "BAND", "BOR", "BEQ", "BNE", "BGT", 
                      "BLT", "BGE", "BLE", "SEQ", "SNE", "GET", "SET", "AND", 
                      "OR", "NOT", "BNOT", "IMPLIES", "IFONLYIF", "EQUAL", 
                      "NOT_EQUAL", "GT", "LT", "GTE", "LTE", "LP", "RP", 
                      "IF", "THEN", "LET", "ELSE", "PARAM", "DEF", "WHEN", 
                      "FORALL", "EXISTS", "MATCH", "RETURN", "WITH", "END", 
                      "RELY", "ANNO", "TRUE", "FALSE", "NUMBER", "STR", 
                      "ID", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_typedef = 2
    RULE_def = 3
    RULE_decl = 4
    RULE_fixpoint = 5
    RULE_path = 6
    RULE_include = 7
    RULE_command = 8
    RULE_section_begin = 9
    RULE_section_end = 10
    RULE_type = 11
    RULE_expr = 12
    RULE_expr_op = 13
    RULE_term = 14
    RULE_tuple = 15
    RULE_func_call = 16
    RULE_forall_expr = 17
    RULE_exists_expr = 18
    RULE_var_anno = 19
    RULE_let_stmt = 20
    RULE_when_stmt = 21
    RULE_match_stmt = 22
    RULE_match_branch = 23
    RULE_assert_stmt = 24
    RULE_anno_stmt = 25
    RULE_if_stmt = 26
    RULE_inductive_decl = 27
    RULE_induct_arm = 28
    RULE_record_decl = 29
    RULE_record_fields = 30
    RULE_value = 31
    RULE_mk = 32
    RULE_name = 33
    RULE_number = 34
    RULE_string = 35
    RULE_bool = 36

    ruleNames =  [ "program", "statement", "typedef", "def", "decl", "fixpoint", 
                   "path", "include", "command", "section_begin", "section_end", 
                   "type", "expr", "expr_op", "term", "tuple", "func_call", 
                   "forall_expr", "exists_expr", "var_anno", "let_stmt", 
                   "when_stmt", "match_stmt", "match_branch", "assert_stmt", 
                   "anno_stmt", "if_stmt", "inductive_decl", "induct_arm", 
                   "record_decl", "record_fields", "value", "mk", "name", 
                   "number", "string", "bool" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    MK=25
    INDUC=26
    RECORD=27
    FIXPOINT=28
    SECTION=29
    SECTION_END=30
    APPEND=31
    CONCAT=32
    ADD=33
    MINUS=34
    MULT=35
    DIV=36
    MOD=37
    LSHIFT=38
    RSHIFT=39
    BITAND=40
    BITOR=41
    BAND=42
    BOR=43
    BEQ=44
    BNE=45
    BGT=46
    BLT=47
    BGE=48
    BLE=49
    SEQ=50
    SNE=51
    GET=52
    SET=53
    AND=54
    OR=55
    NOT=56
    BNOT=57
    IMPLIES=58
    IFONLYIF=59
    EQUAL=60
    NOT_EQUAL=61
    GT=62
    LT=63
    GTE=64
    LTE=65
    LP=66
    RP=67
    IF=68
    THEN=69
    LET=70
    ELSE=71
    PARAM=72
    DEF=73
    WHEN=74
    FORALL=75
    EXISTS=76
    MATCH=77
    RETURN=78
    WITH=79
    END=80
    RELY=81
    ANNO=82
    TRUE=83
    FALSE=84
    NUMBER=85
    STR=86
    ID=87
    COMMENT=88
    WS=89

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SpecParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecParser.StatementContext)
            else:
                return self.getTypedRuleContext(SpecParser.StatementContext,i)


        def getRuleIndex(self):
            return SpecParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SpecParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2080374832) != 0) or _la==72 or _la==73:
                self.state = 74
                self.statement()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(SpecParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def section_begin(self):
            return self.getTypedRuleContext(SpecParser.Section_beginContext,0)


        def section_end(self):
            return self.getTypedRuleContext(SpecParser.Section_endContext,0)


        def typedef(self):
            return self.getTypedRuleContext(SpecParser.TypedefContext,0)


        def def_(self):
            return self.getTypedRuleContext(SpecParser.DefContext,0)


        def decl(self):
            return self.getTypedRuleContext(SpecParser.DeclContext,0)


        def fixpoint(self):
            return self.getTypedRuleContext(SpecParser.FixpointContext,0)


        def inductive_decl(self):
            return self.getTypedRuleContext(SpecParser.Inductive_declContext,0)


        def record_decl(self):
            return self.getTypedRuleContext(SpecParser.Record_declContext,0)


        def include(self):
            return self.getTypedRuleContext(SpecParser.IncludeContext,0)


        def command(self):
            return self.getTypedRuleContext(SpecParser.CommandContext,0)


        def getRuleIndex(self):
            return SpecParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SpecParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.section_begin()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.section_end()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.typedef()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 85
                self.def_()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 86
                self.decl()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 87
                self.fixpoint()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 88
                self.inductive_decl()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 89
                self.record_decl()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 90
                self.include()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 91
                self.command()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(SpecParser.DEF, 0)

        def name(self):
            return self.getTypedRuleContext(SpecParser.NameContext,0)


        def type_(self):
            return self.getTypedRuleContext(SpecParser.TypeContext,0)


        def getRuleIndex(self):
            return SpecParser.RULE_typedef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedef" ):
                return visitor.visitTypedef(self)
            else:
                return visitor.visitChildren(self)




    def typedef(self):

        localctx = SpecParser.TypedefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typedef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(SpecParser.DEF)
            self.state = 95
            self.name()
            self.state = 96
            self.match(SpecParser.T__0)
            self.state = 97
            self.type_(0)
            self.state = 98
            self.match(SpecParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(SpecParser.DEF, 0)

        def name(self):
            return self.getTypedRuleContext(SpecParser.NameContext,0)


        def type_(self):
            return self.getTypedRuleContext(SpecParser.TypeContext,0)


        def expr(self):
            return self.getTypedRuleContext(SpecParser.ExprContext,0)


        def var_anno(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecParser.Var_annoContext)
            else:
                return self.getTypedRuleContext(SpecParser.Var_annoContext,i)


        def getRuleIndex(self):
            return SpecParser.RULE_def

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDef" ):
                return visitor.visitDef(self)
            else:
                return visitor.visitChildren(self)




    def def_(self):

        localctx = SpecParser.DefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(SpecParser.DEF)
            self.state = 101
            self.name()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==66:
                self.state = 102
                self.var_anno()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(SpecParser.T__2)
            self.state = 109
            self.type_(0)
            self.state = 110
            self.match(SpecParser.T__0)
            self.state = 111
            self.expr()
            self.state = 112
            self.match(SpecParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAM(self):
            return self.getToken(SpecParser.PARAM, 0)

        def name(self):
            return self.getTypedRuleContext(SpecParser.NameContext,0)


        def type_(self):
            return self.getTypedRuleContext(SpecParser.TypeContext,0)


        def getRuleIndex(self):
            return SpecParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = SpecParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(SpecParser.PARAM)
            self.state = 115
            self.name()
            self.state = 116
            self.match(SpecParser.T__2)
            self.state = 117
            self.type_(0)
            self.state = 118
            self.match(SpecParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FixpointContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIXPOINT(self):
            return self.getToken(SpecParser.FIXPOINT, 0)

        def name(self):
            return self.getTypedRuleContext(SpecParser.NameContext,0)


        def type_(self):
            return self.getTypedRuleContext(SpecParser.TypeContext,0)


        def expr(self):
            return self.getTypedRuleContext(SpecParser.ExprContext,0)


        def var_anno(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecParser.Var_annoContext)
            else:
                return self.getTypedRuleContext(SpecParser.Var_annoContext,i)


        def getRuleIndex(self):
            return SpecParser.RULE_fixpoint

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFixpoint" ):
                return visitor.visitFixpoint(self)
            else:
                return visitor.visitChildren(self)




    def fixpoint(self):

        localctx = SpecParser.FixpointContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fixpoint)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(SpecParser.FIXPOINT)
            self.state = 121
            self.name()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==66:
                self.state = 122
                self.var_anno()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 128
            self.match(SpecParser.T__2)
            self.state = 129
            self.type_(0)
            self.state = 130
            self.match(SpecParser.T__0)
            self.state = 131
            self.expr()
            self.state = 132
            self.match(SpecParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STR(self):
            return self.getToken(SpecParser.STR, 0)

        def getRuleIndex(self):
            return SpecParser.RULE_path

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPath" ):
                return visitor.visitPath(self)
            else:
                return visitor.visitChildren(self)




    def path(self):

        localctx = SpecParser.PathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_path)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(SpecParser.STR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def path(self):
            return self.getTypedRuleContext(SpecParser.PathContext,0)


        def getRuleIndex(self):
            return SpecParser.RULE_include

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = SpecParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(SpecParser.T__3)
            self.state = 137
            self.path()
            self.state = 138
            self.match(SpecParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecParser.NameContext)
            else:
                return self.getTypedRuleContext(SpecParser.NameContext,i)


        def getRuleIndex(self):
            return SpecParser.RULE_command

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)




    def command(self):

        localctx = SpecParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_command)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(SpecParser.T__4)
            self.state = 142 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 141
                self.name()
                self.state = 144 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==87):
                    break

            self.state = 146
            self.match(SpecParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Section_beginContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SECTION(self):
            return self.getToken(SpecParser.SECTION, 0)

        def name(self):
            return self.getTypedRuleContext(SpecParser.NameContext,0)


        def getRuleIndex(self):
            return SpecParser.RULE_section_begin

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSection_begin" ):
                return visitor.visitSection_begin(self)
            else:
                return visitor.visitChildren(self)




    def section_begin(self):

        localctx = SpecParser.Section_beginContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_section_begin)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(SpecParser.SECTION)
            self.state = 149
            self.name()
            self.state = 150
            self.match(SpecParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Section_endContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SECTION_END(self):
            return self.getToken(SpecParser.SECTION_END, 0)

        def name(self):
            return self.getTypedRuleContext(SpecParser.NameContext,0)


        def getRuleIndex(self):
            return SpecParser.RULE_section_end

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSection_end" ):
                return visitor.visitSection_end(self)
            else:
                return visitor.visitChildren(self)




    def section_end(self):

        localctx = SpecParser.Section_endContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_section_end)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(SpecParser.SECTION_END)
            self.state = 153
            self.name()
            self.state = 154
            self.match(SpecParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.domain = None # TypeContext
            self.Z_type = None # Token
            self.bool_type = None # Token
            self.str_type = None # Token
            self.type_type = None # Token
            self.prop_type = None # Token
            self.list_type = None # Token
            self.option_type = None # Token
            self.map_type = None # Token
            self.tup = None # Token
            self.par = None # TypeContext
            self.codomain = None # TypeContext

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecParser.TypeContext)
            else:
                return self.getTypedRuleContext(SpecParser.TypeContext,i)


        def LP(self):
            return self.getToken(SpecParser.LP, 0)

        def RP(self):
            return self.getToken(SpecParser.RP, 0)

        def MULT(self, i:int=None):
            if i is None:
                return self.getTokens(SpecParser.MULT)
            else:
                return self.getToken(SpecParser.MULT, i)

        def name(self):
            return self.getTypedRuleContext(SpecParser.NameContext,0)


        def IMPLIES(self):
            return self.getToken(SpecParser.IMPLIES, 0)

        def getRuleIndex(self):
            return SpecParser.RULE_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)



    def type_(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SpecParser.TypeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_type, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 157
                localctx.Z_type = self.match(SpecParser.T__5)
                pass

            elif la_ == 2:
                self.state = 158
                localctx.bool_type = self.match(SpecParser.T__6)
                pass

            elif la_ == 3:
                self.state = 159
                localctx.str_type = self.match(SpecParser.T__7)
                pass

            elif la_ == 4:
                self.state = 160
                localctx.type_type = self.match(SpecParser.T__8)
                pass

            elif la_ == 5:
                self.state = 161
                localctx.prop_type = self.match(SpecParser.T__9)
                pass

            elif la_ == 6:
                self.state = 162
                localctx.list_type = self.match(SpecParser.T__10)
                self.state = 163
                self.type_(7)
                pass

            elif la_ == 7:
                self.state = 164
                localctx.option_type = self.match(SpecParser.T__11)
                self.state = 165
                self.type_(6)
                pass

            elif la_ == 8:
                self.state = 166
                localctx.map_type = self.match(SpecParser.T__12)
                self.state = 167
                self.type_(5)
                pass

            elif la_ == 9:
                self.state = 168
                self.match(SpecParser.LP)
                self.state = 169
                self.type_(0)
                self.state = 172 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 170
                    localctx.tup = self.match(SpecParser.MULT)
                    self.state = 171
                    self.type_(0)
                    self.state = 174 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==35):
                        break

                self.state = 176
                self.match(SpecParser.RP)
                pass

            elif la_ == 10:
                self.state = 178
                self.match(SpecParser.LP)
                self.state = 179
                localctx.par = self.type_(0)
                self.state = 180
                self.match(SpecParser.RP)
                pass

            elif la_ == 11:
                self.state = 182
                self.name()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 193
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = SpecParser.TypeContext(self, _parentctx, _parentState)
                    localctx.domain = _prevctx
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_type)
                    self.state = 185
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 186
                    self.match(SpecParser.IMPLIES)
                    self.state = 187
                    self.match(SpecParser.LP)
                    self.state = 188
                    localctx.codomain = self.type_(0)
                    self.state = 189
                    self.match(SpecParser.RP) 
                self.state = 195
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def let_stmt(self):
            return self.getTypedRuleContext(SpecParser.Let_stmtContext,0)


        def when_stmt(self):
            return self.getTypedRuleContext(SpecParser.When_stmtContext,0)


        def match_stmt(self):
            return self.getTypedRuleContext(SpecParser.Match_stmtContext,0)


        def assert_stmt(self):
            return self.getTypedRuleContext(SpecParser.Assert_stmtContext,0)


        def anno_stmt(self):
            return self.getTypedRuleContext(SpecParser.Anno_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(SpecParser.If_stmtContext,0)


        def expr_op(self):
            return self.getTypedRuleContext(SpecParser.Expr_opContext,0)


        def getRuleIndex(self):
            return SpecParser.RULE_expr
